# cg-project

./: .gitignore  .gitmodules  CMakeLists.txt  ComputerGraphicsProject.kdev4  README.md  main.cpp
FerdiuEngine/: .gitignore  CMakeLists.txt
FerdiuEngine/include/: CMakeLists.txt  FerdiuEngine.hpp  FerdiuEngine_export.h  GameObject.hpp  Material.hpp  Physics.hpp  Primitives.hpp  Scene.hpp  Screen.hpp  Shader.hpp  Texture.hpp  Time.hpp  Vertex.hpp
FerdiuEngine/include/Components/: Camera.hpp  Component.hpp  CubeRenderer.hpp  Light.hpp  MeshRenderer.hpp  PlaneRenderer.hpp  Renderer.hpp  SphereRenderer.hpp  Transform.hpp
FerdiuEngine/include/Components/Physic/: Bounds.hpp  BoxCollider.hpp  Collider.hpp  RigidBody.hpp  SphereCollider.hpp
FerdiuEngine/include/utils/: BitMapFile.hpp  Colors.hpp  Debug.hpp  GLMatrices.hpp  GLMatricesStack.hpp  Math.hpp
FerdiuEngine/src/: CMakeLists.txt  FerdiuEngine.cpp  GameObject.cpp  Material.cpp  Physics.cpp  Primitives.cpp  Scene.cpp  Screen.cpp  Shader.cpp  Texture.cpp  Time.cpp
FerdiuEngine/src/Components/: Camera.cpp  Component.cpp  CubeRenderer.cpp  Light.cpp  MeshRenderer.cpp  PlaneRenderer.cpp  Renderer.cpp  SphereRenderer.cpp  Transform.cpp
FerdiuEngine/src/Components/Physic/: Bounds.cpp  BoxCollider.cpp  Collider.cpp  RigidBody.cpp  SphereCollider.cpp
FerdiuEngine/src/utils/: BitMapFile.cpp  Debug.cpp  GLMatrices.cpp  GLMatricesStack.cpp  Math.cpp
include/: Ball.hpp  Board.hpp  CMakeLists.txt  DefaultShader.hpp  Inputs.hpp  LookAtCamera.hpp  PrintPhysicsPosition.hpp
resources/: CMakeLists.txt
resources/maps/: map1.map
shaders/: CMakeLists.txt  fragmentShader.glsl  vertexShader.glsl
src/: Ball.cpp  Board.cpp  CMakeLists.txt  DefaultShader.cpp  Inputs.cpp  LookAtCamera.cpp  PrintPhysicsPosition.cpp
